# paragon

./: .travis.yml  LICENSE  README.md  paragon.cabal
lib/java/lang/: Object.pi
src/Language/Java/: Paragon.hs
src/Language/Java/Paragon/: ActorResolution.hs  Annotated.hs  Annotation.hs  CodeGenJava.hs  Error.hs  Flags.hs  Headers.hs  Interaction.hs  Lexer.x  NameResolution.hs  Parac.hs  Parser.hs  PolicyLang.hs  SourcePos.hs  SrcPos.hs  Sub.hs  Syntax.hs  TypeChecker.hs  Unparse.hs
src/Language/Java/Paragon/Error/: Contexts.hs  Error.hs  ErrorLabel.hs  ExampleErrors.hs  StandardContexts.hs  StandardErrors.hs
src/Language/Java/Paragon/Interaction/: Debugging.hs  Flags.hs  Headers.hs  IO.hs  Panic.hs  Pretty.hs  Unparse.hs
src/Language/Java/Paragon/Monad/: Base.hs  Helpers.hs  NameRes.hs  PiReader.hs  TypeCheckM.hs  Uniq.hs
src/Language/Java/Paragon/Monad/PiReader/: Helpers.hs  MonadPR.hs  PiFunc.hs
src/Language/Java/Paragon/NameResolution/: Errors.hs  Expansion.hs  ExpansionBuilders.hs  ExpansionRecord.hs  Helpers.hs  Resolvers.hs
src/Language/Java/Paragon/NameResolution/Resolvers/: Expressions.hs  Modifiers.hs  Names.hs  Statements.hs  Types.hs
src/Language/Java/Paragon/Parser/: Expressions.hs  Helpers.hs  Modifiers.hs  Names.hs  Separators.hs  Statements.hs  Symbols.hs  Types.hs
src/Language/Java/Paragon/PolicyLang/: ActorSet.hs  Policy.hs
src/Language/Java/Paragon/Syntax/: Expressions.hs  Modifiers.hs  Names.hs  Statements.hs  Types.hs
src/Language/Java/Paragon/TypeChecker/: Errors.hs  Instantiate.hs  PkgMap.hs  TcTypes.hs  TcTypes.hs-boot  TypeMap.hs  Types.hs  Types.hs-boot
src/Language/Java/Paragon/TypeChecker/Monad/: TcSignatureM.hs
test/Language/Java/Paragon/: ASTHelpers.hs  LexerSpec.hs  NameResolutionSpec.hs  ParacSpec.hs  ParserSpec.hs  SyntaxSpec.hs  TypeCheckerSpec.hs
test/Language/Java/Paragon/Monad/: BaseSpec.hs
test/Language/Java/Paragon/parser/failure/: ClassDeclIntMethodMissBody.err  ClassDeclIntMethodMissBody.para  ClassDeclIntMethodMissOpenCurly.err  ClassDeclIntMethodMissOpenCurly.para  ClassDeclIntMethodSemiColonMissCloseParen.err  ClassDeclIntMethodSemiColonMissCloseParen.para  ClassDeclIntMethodSemiColonMissName.err  ClassDeclIntMethodSemiColonMissOpenParen.err  ClassDeclIntMethodSemiColonMissOpenParen.para  ClassDeclMethodSemiColonMissRetType.err  ClassDeclMethodSemiColonMissRetType.para  ClassDeclMissBody.err  ClassDeclMissCloseBrace.err  ClassDeclMissOpenBrace.err  ClassDeclMissOpenBrace.para  ClassDeclModTypo.err  ClassDeclModTypo.para  ClassDeclMultFieldsMissComma.err  ClassDeclSingleFieldComma.err  ClassDeclSingleFieldComma.para  ClassDeclSingleFieldInitMissExp.err  ClassDeclSingleFieldInitMissExp.para  ClassDeclSingleFieldInitMissSemiColon.err  ClassDeclSingleFieldInitMissSemiColon.para  ClassDeclSingleFieldMissName.err  ClassDeclSingleFieldMissName.para  (+41 more)
test/base/: TestBase.hs
test/fulltests/elementary/test2/: B.para
test/fulltests/elementary/test3/: A.para  B.para
test/namerestests/failure/: ClassDeclVoidMethodSingleAssignVar.para
test/namerestests/success/: ClassDeclIntMethodModEmptyBody.para  ClassDeclMultFields.para  ClassDeclMultPrimFieldsInit.para  ClassDeclShadowingPrimRef.para  ClassDeclShadowingRefRef.para  ClassDeclSingleFieldReadsMod.para  ClassDeclSingleFieldRefType.para  ClassDeclSingleLowPolicyField.para  ClassDeclVoidMethodSemiColon.para  ClassDeclVoidMethodSingleAssignLit.para  ClassDeclVoidMethodSingleLocalVarDecl.para  ImportDeclSingle.para  ImportDeclSingleStatic.para  ImportDeclStaticOnDemand.para  ImportDeclTypeOnDemand.para  PkgDeclQName.para
test/paractests/elementary/test1/: .compile
test/paractests/elementaryWithPiFiles/test1/: .compile
test/paractests/elementaryWithPiFiles/test2/: .compile
test/parsertests/failure/: ClassDeclIntMethodMissBody.err  ClassDeclIntMethodMissCloseCurly.err  ClassDeclIntMethodMissCloseCurly.para  ClassDeclIntMethodMissOpenCurly.err  ClassDeclIntMethodSemiColonMissCloseParen.err  ClassDeclIntMethodSemiColonMissName.err  ClassDeclIntMethodSemiColonMissName.para  ClassDeclIntMethodSemiColonMissOpenParen.err  ClassDeclMethodSemiColonMissRetType.err  ClassDeclMissCloseBrace.para  ClassDeclMissName.err  ClassDeclMultFieldsMissComma.para  ClassDeclSingleFieldComma.err  ClassDeclSingleFieldComma.para  ClassDeclSingleFieldInitMissExp.err  ClassDeclSingleFieldInitMissExp.para  ClassDeclSingleFieldInitMissSemiColon.para  ClassDeclSingleFieldMissName.err  ClassDeclSingleFieldMissName.para  ClassDeclSingleFieldMissSemiColon.err  ClassDeclSingleFieldMissSemiColon.para  ClassDeclSingleFieldMissType.err  ClassDeclSingleFieldMissType.para  ClassDeclSingleFieldPolicyModMissSymbol.err  ClassDeclSingleLocalVarInitMissSemiColon.err  ClassDeclSingleLocalVarInitMissSemiColon.para  ClassDeclSingleMethodNotLastVarArgsParam.err  ClassDeclSingleMethodNotLastVarArgsParam.para  ClassDeclSingleMethodParamMissName.err  ClassDeclSingleMethodParamMissName.para  ClassDeclSingleMethodParamMissType.err  ClassDeclSingleMethodParamMissType.para  ClassDeclSingleMethodTwoParamsMissComma.err  ClassDeclSingleMethodTwoParamsMissComma.para  ClassDeclSinglePolicyFieldClauseHeadMissColon.err  ClassDeclSinglePolicyFieldClauseHeadMissColon.para  ClassDeclSinglePolicyFieldMissOpenBrace.err  ClassDeclSinglePolicyFieldMissOpenBrace.para  ClassDeclVoidMethodAssignMissRhs.err  ClassDeclVoidMethodAssignMissRhs.para  (+20 more)
test/parsertests/success/: ClassDeclIntMethodSemiColon.para  ClassDeclSingleField.para  ClassDeclSingleFieldMod.para  ClassDeclSingleFieldWritesMod.para  ClassDeclSingleHighPolicyField.para  ClassDeclSingleMethodOneParam.para  ClassDeclSingleMethodTwoParams.para  ClassDeclSingleMethodVarArgsParam.para  ClassDeclSingleRefFieldInit.para  ClassDeclVoidMethodEmptyBody.para  ClassDeclVoidMethodMultLocalVarDecls.para  ClassDeclVoidMethodSemiColonStmt.para  ClassDeclVoidMethodSingleAssignVar.para  ClassDeclVoidMethodSingleLocalVarDeclMod.para  ClassDeclVoidMethodSingleRefLocalVarInit.para  PkgDeclSingle.para
test/typechecktests/success/: ClassDeclEmpty.para
utils/: failing_tests.sh
(+5 files in other folders)
