name: paragon
version: 0.3.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: Niklas Broberg <niklas.broberg@chalmers.se>
stability: Experimental
synopsis: Paragon
description: Paragon suite
category: Language
author: Niklas Broberg
tested-with: GHC ==7.0.2
data-dir: ""

flag base4

Library
  Build-Depends:        transformers -any, bytestring -any, directory -any,
                        filepath -any
  if flag(base4)
    Build-depends:      base >= 4 && < 5, syb
    cpp-options:        -DBASE4
  else
    Build-depends:      base >= 3 && < 4
  GHC-options:          -Wall
  Exposed-modules:      Language.Java.Paragon.Interaction
                        Language.Java.Paragon.Error
                        Language.Java.Paragon.Flags
                        Language.Java.Paragon.Headers
                        Language.Java.Paragon.SourcePos
                        Language.Java.Paragon.Error.ErrorLabel
                        Language.Java.Paragon.Error.ExampleErrors
                        Language.Java.Paragon.Error.Contexts
                        Language.Java.Paragon.Monad.Base
                        Language.Java.Paragon.Monad.Helpers
  Hs-source-dirs:       src
  ghc-options:         -Wall -Werror -O2 -rtsopts

executable parac
    build-depends: transformers -any, bytestring -any, directory -any,
                   filepath -any

    if flag(base4)
        build-depends: base >=4 && <5, syb -any
        buildable: True
        cpp-options: -DBASE4
    else
        build-depends: base >=3 && <4
        buildable: True
    main-is: Language/Java/Paragon.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Language.Java.Paragon.Interaction
                   Language.Java.Paragon.Flags
                   Language.Java.Paragon.Headers
                   Language.Java.Paragon.SourcePos
                   Language.Java.Paragon.Error
                   Language.Java.Paragon.Error.ErrorLabel
                   Language.Java.Paragon.Error.ExampleErrors
                   Language.Java.Paragon.Error.Contexts
                   Language.Java.Paragon.Monad.Base
                   Language.Java.Paragon.Monad.Helpers
    ghc-options: -Wall -Werror -O2 -rtsopts

test-suite spec
    main-is:        Spec.hs
    type:           exitcode-stdio-1.0
    ghc-options:    -Wall -Werror -threaded
    hs-source-dirs: test
    build-depends:  base >= 4 && < 5, hspec, paragon >= 0.3
