name: paragon
version: 0.3.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: Niklas Broberg <niklas.broberg@chalmers.se>
stability: Experimental
synopsis: Paragon
description: Paragon suite
category: Language
author: Niklas Broberg
tested-with: GHC == 7.4.1
data-dir: ""

extra-source-files: src/Language/Java/Paragon/Lexer.x

Library
    build-tools:        alex >= 2.3
    build-depends:      transformers -any, bytestring -any, directory -any,
                        filepath -any, array >= 0.1, parsec >= 2.1 && < 3,
                        base >= 4 && < 5, syb
    cpp-options:        -DBASE4
    exposed-modules:    Language.Java.Paragon.Interaction
                        Language.Java.Paragon.Error
                        Language.Java.Paragon.Flags
                        Language.Java.Paragon.Headers
                        Language.Java.Paragon.SrcPos
                        Language.Java.Paragon.Error.ErrorLabel
                        Language.Java.Paragon.Error.ExampleErrors
                        Language.Java.Paragon.Error.Contexts
                        Language.Java.Paragon.Monad.Base
                        Language.Java.Paragon.Monad.Helpers
                        Language.Java.Paragon.Lexer
                        Language.Java.Paragon.Parser
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror -O2 -rtsopts

executable parac
    build-tools:        alex >= 2.3
    build-depends:      transformers -any, bytestring -any, directory -any,
                        filepath -any, array >= 0.1, parsec >= 2.1 && < 3, 
                        paragon >= 0.3, base >=4 && <5, syb -any
    buildable:          True
    cpp-options:        -DBASE4
    hs-source-dirs:     src
    main-is:            Language/Java/Paragon.hs
    buildable:          True
    other-modules:      Language.Java.Paragon.Lexer
    ghc-options:        -Wall -Werror -O2 -rtsopts

test-suite spec
    main-is:            Spec.hs
    type:               exitcode-stdio-1.0
    ghc-options:        -Wall -Werror -threaded
    hs-source-dirs:     test
    build-depends:      base >= 4 && < 5,
                        hspec,
                        paragon >= 0.3
