name: paragon
version: 0.3.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: Niklas Broberg <niklas.broberg@chalmers.se>
stability: Experimental
synopsis: Paragon
description: Paragon suite
category: Language
author: Niklas Broberg
tested-with: GHC == 7.4.1
data-dir: ""

extra-source-files: src/Language/Java/Paragon/Lexer.x

Library
    build-tools:        alex >= 2.3
    build-depends:      transformers -any, bytestring -any, directory -any,
                        filepath -any, array >= 0.1, parsec >= 2.1 && < 3,
                        base >= 4 && < 5, syb, pretty,
                        template-haskell, containers >= 0.5
    cpp-options:        -DBASE4
    exposed-modules:    Language.Java.Paragon.Annotated
                        Language.Java.Paragon.CodeGenJava
                        Language.Java.Paragon.Error
                        Language.Java.Paragon.Error.Contexts
                        Language.Java.Paragon.Error.ErrorLabel
                        Language.Java.Paragon.Error.ExampleErrors
                        Language.Java.Paragon.Error.StandardErrors
                        Language.Java.Paragon.Interaction
                        Language.Java.Paragon.Interaction.Debugging
                        Language.Java.Paragon.Interaction.Flags
                        Language.Java.Paragon.Interaction.Headers
                        Language.Java.Paragon.Interaction.Panic
                        Language.Java.Paragon.Interaction.Pretty
                        Language.Java.Paragon.Interaction.Unparse
                        Language.Java.Paragon.Lexer
                        Language.Java.Paragon.Monad.Base
                        Language.Java.Paragon.Monad.Helpers
                        Language.Java.Paragon.Monad.NameRes
                        Language.Java.Paragon.Monad.PiReader
                        Language.Java.Paragon.Monad.PiReader.Helpers
                        Language.Java.Paragon.Monad.PiReader.MonadPR
                        Language.Java.Paragon.Monad.PiReader.PiFunc
                        Language.Java.Paragon.NameResolution
                        Language.Java.Paragon.NameResolution.Errors
                        Language.Java.Paragon.NameResolution.Expansion
                        Language.Java.Paragon.NameResolution.ExpansionBuilders
                        Language.Java.Paragon.NameResolution.ExpansionRecord
                        Language.Java.Paragon.NameResolution.Helpers
                        Language.Java.Paragon.NameResolution.Resolvers
                        Language.Java.Paragon.NameResolution.Resolvers.Names
                        Language.Java.Paragon.NameResolution.Resolvers.Types
                        Language.Java.Paragon.Parac
                        Language.Java.Paragon.Parser
                        Language.Java.Paragon.Parser.Names
                        Language.Java.Paragon.Parser.Types
                        Language.Java.Paragon.Parser.Statements
                        Language.Java.Paragon.Parser.Expressions
                        Language.Java.Paragon.Parser.Modifiers
                        Language.Java.Paragon.Parser.Separators
                        Language.Java.Paragon.Parser.Helpers
                        Language.Java.Paragon.SrcPos
                        Language.Java.Paragon.Syntax
                        Language.Java.Paragon.Syntax.Names
                        Language.Java.Paragon.Syntax.Types
                        Language.Java.Paragon.Syntax.Statements
                        Language.Java.Paragon.Syntax.Expressions
                        Language.Java.Paragon.Syntax.Modifiers
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror -O2 -rtsopts

executable parac
    build-tools:        alex >= 2.3
    build-depends:      transformers -any, bytestring -any, directory -any,
                        filepath -any, array >= 0.1, parsec >= 2.1 && < 3, 
                        paragon >= 0.3, base >=4 && <5, syb -any, pretty,
                        template-haskell, containers >= 0.5
    buildable:          True
    cpp-options:        -DBASE4
    hs-source-dirs:     src
    main-is:            Language/Java/Paragon.hs
    buildable:          True
    other-modules:      Language.Java.Paragon.Lexer
    ghc-options:        -Wall -Werror -O2 -rtsopts

test-suite spec
    main-is:            Spec.hs
    type:               exitcode-stdio-1.0
    ghc-options:        -Wall -Werror -threaded
    hs-source-dirs:     test
    build-depends:      base >= 4 && < 5,
                        directory,
                        filepath,
                        hspec,
                        parsec >= 2.1 && < 3,
                        paragon >= 0.3,
                        process
